# gemini-enterprise-observability

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: test.yml
apps/api/: main.py  requirements-dev.txt  requirements.txt
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
docs/: DEPLOYMENT.md  DEPLOYMENT.zh-CN.md  GE_CONSOLE_SETUP.md  KNOWN_LIMITATIONS.md  KNOWN_LIMITATIONS.zh-CN.md  RUNBOOK.md  TROUBLESHOOTING.md  TROUBLESHOOTING.zh-CN.md  TUTORIAL.md  TUTORIAL.zh-CN.md
infra/: INVARIANTS.md
infra/scripts/: apply_views.py  bootstrap.py  doctor.sh  import_orphans.sh  preflight.sh
infra/sql_templates/: views.sql.tmpl
playground/de-api-probe/: README.md  notebooklm-sa-gate.md
playground/ge-generation-probe/: FINDINGS.md  README.md  run_probes.sh
terraform/: README.md  main.tf  snapshot_refresh.sql.tftpl  terraform.tfvars.example  variables.tf
tests/unit/: test_agent_findings.py  test_audit_cleanup.py  test_audit_principal_subject_coalesce.py  test_backfill.py  test_batch_a_fixes.py  test_batch_b_fixes.py  test_batch_c_fixes.py  test_batch_d_fixes.py  test_batch_e_fixes.py  test_bootstrap_seeds_tier_defaults.py  test_bq_location_follows_region.py  test_challenge_findings.py  test_cloud_shell_tutorial.py  test_csrf_and_input_validation.py  test_detail_badge_and_udf.py  test_doctor_autoauth.py  test_env_setup.py  test_final_polish.py  test_identity_resolver.py  (+39 more)
(+72 files in other folders)
